--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,32 @@
-<!DOCTYPE html>
 <html>
 <head>
 <style>
-#div1 {
-  position: absolute;
-  left: 50px;
-  width: calc(100% - 100px);
-  border: 1px solid black;
-  background-color: yellow;
-  padding: 5px;
+.flex-container {
+  display: flex;
+  background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
 }
 </style>
 </head>
 <body>
 
-<h2>Hoàng Văn Phan</h2>
-<p>hoangphan2002tb@gmail.com</p>
+<h1>dothuthuy 2021050893</h1>
 
-<div id="div1">Some text...</div>
+<div class="flex-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+</div>
+
+<p>namdinh <em>hanoi</em> hanam <em>ninh binh</em>.</p>
+
+<p>dothuthuy 2021050893</p>
 
 </body>
 </html>
